tests/cannot-apply.lushui
;; TEST fail check

module core

Abomination: Type = 0 1
